set nav unordered list to the right

--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 <body>
   <nav class="nav__container">
     <div class="nav__div">
-      <p>
+      <p class="nav__title">
         Travel Site
       </p>
     </div>
@@ -104,9 +104,7 @@
   </main>
 
   <footer>
-    <div>
-      hi
-    </div>
+  
   </footer>
 </body>
 </html>
