bolded the nav__title

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
   <nav class="nav__container">
     <div class="nav__div">
       <p class="nav__title">
-        Travel Site
+        <strong>Travel Site</strong>
       </p>
     </div>
     <div class="nav__div">
